--- a/modemmanager/PKGBUILD
+++ b/modemmanager/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgbase=modemmanager
 pkgname=(modemmanager libmm-glib)
-pkgver=1.18.4+1+g780b1478
+pkgver=1.18.6
 pkgrel=1
 pkgdesc="Mobile broadband modem management service"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -14,26 +14,21 @@ depends=(systemd libgudev polkit ppp libqmi libmbim
          mobile-broadband-provider-info)
 makedepends=(gtk-doc gobject-introspection vala meson git bash-completion)
 checkdepends=(python-gobject python-dbus)
-_commit=ac6d31e463168e894269d2a7c949de4577026eea  # tags/1.18.4
-source=("git+https://gitlab.freedesktop.org/mobile-broadband/ModemManager.git#commit=$_commit"
-        meson-0.61.patch)
-sha256sums=('SKIP'
-            '6cc136c1fd5882248ee1aeda64d91265c115718c9e41a9f4b44c2388e7cef9ed')
+_commit=a7bcf2036b34d5043dbc33fee7d98bae5859c4d3  # tags/1.18.6
+source=("git+https://gitlab.freedesktop.org/mobile-broadband/ModemManager.git#commit=$_commit")
+sha256sums=('SKIP')
 
 pkgver() {
   cd ModemManager
-  git describe --tags | sed 's/-rc/rc/;s/-/+/g'
+  git describe --tags | sed 's/-rc/rc/;s/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
   cd ModemManager
-  # Meson 0.61 fixes
-  git cherry-pick -n 0ab9fc343fdc21235bc24c80c78a13b1ea078208
-  patch -Np1 -i ${srcdir}/meson-0.61.patch
 }
 
 build() {
-  local meson_args=(
+  local meson_options=(
     -D dbus_policy_dir=/usr/share/dbus-1/system.d
     -D dist_version="\"$pkgver-$pkgrel\""
     -D gtk_doc=true
@@ -42,7 +37,7 @@ build() {
     -D vapi=true
   )
 
-  arch-meson ModemManager build "${meson_args[@]}"
+  arch-meson ModemManager build "${meson_options[@]}"
   meson compile -C build
 }
 
