--- a/linux-ppc64/config
+++ b/linux-ppc64/config
@@ -1,15 +1,15 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/powerpc 5.16.8-arch1 Kernel Configuration
+# Linux/powerpc 5.17.0-arch1 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="gcc (Arch POWER) 11.2.0"
+CONFIG_CC_VERSION_TEXT="powerpc64-unknown-linux-gnu-gcc (GCC) 11.2.0"
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=110200
 CONFIG_CLANG_VERSION=0
 CONFIG_AS_IS_GNU=y
-CONFIG_AS_VERSION=23700
+CONFIG_AS_VERSION=23800
 CONFIG_LD_IS_BFD=y
-CONFIG_LD_VERSION=23700
+CONFIG_LD_VERSION=23800
 CONFIG_LLD_VERSION=0
 CONFIG_CC_CAN_LINK=y
 CONFIG_CC_CAN_LINK_STATIC=y
@@ -277,11 +277,10 @@ CONFIG_PPC_FPU_REGS=y
 CONFIG_PPC_FPU=y
 CONFIG_ALTIVEC=y
 CONFIG_VSX=y
+CONFIG_PPC_64S_HASH_MMU=y
 CONFIG_PPC_RADIX_MMU=y
 CONFIG_PPC_RADIX_MMU_DEFAULT=y
-CONFIG_PPC_HAVE_KUEP=y
 CONFIG_PPC_KUEP=y
-CONFIG_PPC_HAVE_KUAP=y
 CONFIG_PPC_KUAP=y
 # CONFIG_PPC_KUAP_DEBUG is not set
 CONFIG_PPC_PKEY=y
@@ -304,9 +303,6 @@ CONFIG_ARCH_MMAP_RND_BITS_MAX=29
 CONFIG_ARCH_MMAP_RND_BITS_MIN=14
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MAX=13
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS_MIN=7
-CONFIG_HAVE_SETUP_PER_CPU_AREA=y
-CONFIG_NEED_PER_CPU_EMBED_FIRST_CHUNK=y
-CONFIG_NEED_PER_CPU_PAGE_FIRST_CHUNK=y
 CONFIG_NR_IRQS=512
 CONFIG_NMI_IPI=y
 CONFIG_STACKTRACE_SUPPORT=y
@@ -351,7 +347,6 @@ CONFIG_PPC_PSERIES=y
 CONFIG_PARAVIRT_SPINLOCKS=y
 CONFIG_PPC_SPLPAR=y
 CONFIG_PSERIES_ENERGY=m
-CONFIG_SCANLOG=m
 CONFIG_IO_EVENT_IRQ=y
 CONFIG_LPARCFG=y
 CONFIG_PPC_SMLPAR=y
@@ -370,7 +365,7 @@ CONFIG_PPC_PMAC64=y
 CONFIG_PPC_VAS=y
 CONFIG_KVM_GUEST=y
 CONFIG_EPAPR_PARAVIRT=y
-CONFIG_PPC_NATIVE=y
+CONFIG_PPC_HASH_MMU_NATIVE=y
 CONFIG_PPC_OF_BOOT_TRAMPOLINE=y
 CONFIG_PPC_DT_CPU_FTRS=y
 # CONFIG_UDBG_RTAS_CONSOLE is not set
@@ -471,7 +466,6 @@ CONFIG_FA_DUMP=y
 CONFIG_IRQ_ALL_CPUS=y
 CONFIG_NUMA=y
 CONFIG_NODES_SHIFT=8
-CONFIG_USE_PERCPU_NUMA_NODE_ID=y
 CONFIG_HAVE_MEMORYLESS_NODES=y
 CONFIG_ARCH_SELECT_MEMORY_MODEL=y
 CONFIG_ARCH_SPARSEMEM_ENABLE=y
@@ -552,6 +546,7 @@ CONFIG_KVM_BOOK3S_HV_POSSIBLE=y
 CONFIG_KVM_BOOK3S_64=m
 CONFIG_KVM_BOOK3S_64_HV=m
 CONFIG_KVM_BOOK3S_64_PR=m
+CONFIG_KVM_BOOK3S_HV_NESTED_PMU_WORKAROUND=y
 CONFIG_KVM_XICS=y
 CONFIG_KVM_XIVE=y
 
@@ -628,6 +623,7 @@ CONFIG_HAVE_ARCH_MMAP_RND_BITS=y
 CONFIG_ARCH_MMAP_RND_BITS=14
 CONFIG_HAVE_ARCH_MMAP_RND_COMPAT_BITS=y
 CONFIG_ARCH_MMAP_RND_COMPAT_BITS=7
+CONFIG_PAGE_SIZE_LESS_THAN_256KB=y
 CONFIG_HAVE_RELIABLE_STACKTRACE=y
 CONFIG_HAVE_ARCH_NVRAM_OPS=y
 CONFIG_CLONE_BACKWARDS=y
@@ -666,12 +662,14 @@ CONFIG_MODULE_REL_CRCS=y
 # CONFIG_MODULE_COMPRESS_GZIP is not set
 CONFIG_MODULE_COMPRESS_XZ=y
 # CONFIG_MODULE_COMPRESS_ZSTD is not set
+CONFIG_MODULE_DECOMPRESS=y
 # CONFIG_MODULE_ALLOW_MISSING_NAMESPACE_IMPORTS is not set
 CONFIG_MODPROBE_PATH="/usr/bin/modprobe"
 CONFIG_MODULES_TREE_LOOKUP=y
 CONFIG_BLOCK=y
 CONFIG_BLK_CGROUP_RWSTAT=y
 CONFIG_BLK_DEV_BSG_COMMON=y
+CONFIG_BLK_ICQ=y
 CONFIG_BLK_DEV_BSGLIB=y
 CONFIG_BLK_DEV_INTEGRITY=y
 CONFIG_BLK_DEV_INTEGRITY_T10=m
@@ -803,7 +801,10 @@ CONFIG_MEMORY_FAILURE=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
 # CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS is not set
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
-CONFIG_CLEANCACHE=y
+CONFIG_NEED_PER_CPU_EMBED_FIRST_CHUNK=y
+CONFIG_NEED_PER_CPU_PAGE_FIRST_CHUNK=y
+CONFIG_USE_PERCPU_NUMA_NODE_ID=y
+CONFIG_HAVE_SETUP_PER_CPU_AREA=y
 CONFIG_FRONTSWAP=y
 CONFIG_CMA=y
 CONFIG_CMA_SYSFS=y
@@ -846,6 +847,7 @@ CONFIG_ARCH_HAS_PKEYS=y
 # CONFIG_READ_ONLY_THP_FOR_FS is not set
 CONFIG_ARCH_HAS_PTE_SPECIAL=y
 CONFIG_ARCH_HAS_HUGEPD=y
+CONFIG_ANON_VMA_NAME=y
 
 #
 # Data Access Monitoring
@@ -1046,7 +1048,6 @@ CONFIG_NF_TABLES_NETDEV=y
 CONFIG_NFT_NUMGEN=m
 CONFIG_NFT_CT=m
 CONFIG_NFT_FLOW_OFFLOAD=m
-CONFIG_NFT_COUNTER=m
 CONFIG_NFT_CONNLIMIT=m
 CONFIG_NFT_LOG=m
 CONFIG_NFT_LIMIT=m
@@ -1246,7 +1247,6 @@ CONFIG_NFT_REJECT_IPV4=m
 CONFIG_NFT_DUP_IPV4=m
 CONFIG_NFT_FIB_IPV4=m
 CONFIG_NF_TABLES_ARP=y
-CONFIG_NF_FLOW_TABLE_IPV4=m
 CONFIG_NF_DUP_IPV4=m
 CONFIG_NF_LOG_ARP=m
 CONFIG_NF_LOG_IPV4=m
@@ -1286,7 +1286,6 @@ CONFIG_NF_TABLES_IPV6=y
 CONFIG_NFT_REJECT_IPV6=m
 CONFIG_NFT_DUP_IPV6=m
 CONFIG_NFT_FIB_IPV6=m
-CONFIG_NF_FLOW_TABLE_IPV6=m
 CONFIG_NF_DUP_IPV6=m
 CONFIG_NF_REJECT_IPV6=m
 CONFIG_NF_LOG_IPV6=m
@@ -1682,6 +1681,7 @@ CONFIG_BT_INTEL=m
 CONFIG_BT_BCM=m
 CONFIG_BT_RTL=m
 CONFIG_BT_QCA=m
+CONFIG_BT_MTK=m
 CONFIG_BT_HCIBTUSB=m
 CONFIG_BT_HCIBTUSB_AUTOSUSPEND=y
 CONFIG_BT_HCIBTUSB_BCM=y
@@ -1758,6 +1758,7 @@ CONFIG_RFKILL_LEDS=y
 CONFIG_RFKILL_INPUT=y
 CONFIG_RFKILL_GPIO=m
 CONFIG_NET_9P=m
+CONFIG_NET_9P_FD=m
 CONFIG_NET_9P_VIRTIO=m
 # CONFIG_NET_9P_DEBUG is not set
 CONFIG_CAIF=m
@@ -1930,6 +1931,7 @@ CONFIG_AUXILIARY_BUS=y
 # CONFIG_UEVENT_HELPER is not set
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
+CONFIG_DEVTMPFS_SAFE=y
 CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 
@@ -1985,6 +1987,7 @@ CONFIG_PROC_EVENTS=y
 
 CONFIG_FW_CFG_SYSFS=m
 CONFIG_FW_CFG_SYSFS_CMDLINE=y
+CONFIG_CS_DSP=m
 # CONFIG_GOOGLE_FIRMWARE is not set
 
 #
@@ -1998,6 +2001,7 @@ CONFIG_GNSS_SERIAL=m
 CONFIG_GNSS_MTK_SERIAL=m
 CONFIG_GNSS_SIRF_SERIAL=m
 CONFIG_GNSS_UBX_SERIAL=m
+CONFIG_GNSS_USB=m
 CONFIG_MTD=m
 # CONFIG_MTD_TESTS is not set
 
@@ -2203,7 +2207,6 @@ CONFIG_CDROM_PKTCDVD_BUFFERS=8
 CONFIG_ATA_OVER_ETH=m
 CONFIG_VIRTIO_BLK=m
 CONFIG_BLK_DEV_RBD=m
-CONFIG_BLK_DEV_RSXX=m
 
 #
 # NVME Support
@@ -2483,7 +2486,6 @@ CONFIG_ATA_BMDMA=y
 CONFIG_ATA_PIIX=m
 CONFIG_SATA_DWC=m
 # CONFIG_SATA_DWC_OLD_DMA is not set
-# CONFIG_SATA_DWC_DEBUG is not set
 CONFIG_SATA_MV=m
 CONFIG_SATA_NV=m
 CONFIG_SATA_PROMISE=m
@@ -2851,6 +2853,9 @@ CONFIG_BE2NET_BE2=y
 CONFIG_BE2NET_BE3=y
 CONFIG_BE2NET_LANCER=y
 CONFIG_BE2NET_SKYHAWK=y
+CONFIG_NET_VENDOR_ENGLEDER=y
+CONFIG_TSNEP=m
+# CONFIG_TSNEP_SELFTESTS is not set
 CONFIG_NET_VENDOR_EZCHIP=y
 CONFIG_EZCHIP_NPS_MANAGEMENT_ENET=m
 CONFIG_NET_VENDOR_GOOGLE=y
@@ -2934,6 +2939,7 @@ CONFIG_ENC28J60=m
 # CONFIG_ENC28J60_WRITEVERIFY is not set
 CONFIG_ENCX24J600=m
 CONFIG_LAN743X=m
+CONFIG_LAN966X_SWITCH=m
 CONFIG_NET_VENDOR_MICROSEMI=y
 # CONFIG_MSCC_OCELOT_SWITCH is not set
 CONFIG_NET_VENDOR_MYRI=y
@@ -3038,6 +3044,8 @@ CONFIG_TEHUTI=m
 CONFIG_NET_VENDOR_TI=y
 # CONFIG_TI_CPSW_PHY_SEL is not set
 CONFIG_TLAN=m
+CONFIG_NET_VENDOR_VERTEXCOM=y
+CONFIG_MSE102X=m
 CONFIG_NET_VENDOR_VIA=y
 CONFIG_VIA_RHINE=m
 # CONFIG_VIA_RHINE_MMIO is not set
@@ -3331,7 +3339,6 @@ CONFIG_IWLWIFI_LEDS=y
 CONFIG_IWLDVM=m
 CONFIG_IWLMVM=m
 CONFIG_IWLWIFI_OPMODE_MODULAR=y
-CONFIG_IWLWIFI_BCAST_FILTERING=y
 
 #
 # Debugging Options
@@ -3908,6 +3915,7 @@ CONFIG_SERIAL_8250_DWLIB=y
 CONFIG_SERIAL_8250_FSL=y
 CONFIG_SERIAL_8250_DW=m
 CONFIG_SERIAL_8250_RT288X=y
+CONFIG_SERIAL_8250_PERICOM=m
 CONFIG_SERIAL_OF_PLATFORM=y
 
 #
@@ -4230,27 +4238,27 @@ CONFIG_GENERIC_PINCONF=y
 CONFIG_PINCTRL_AS3722=m
 CONFIG_PINCTRL_AXP209=m
 CONFIG_PINCTRL_DA9062=m
+CONFIG_PINCTRL_MAX77620=m
 CONFIG_PINCTRL_MCP23S08_I2C=m
 CONFIG_PINCTRL_MCP23S08_SPI=m
 CONFIG_PINCTRL_MCP23S08=m
-CONFIG_PINCTRL_SINGLE=m
-CONFIG_PINCTRL_SX150X=y
-CONFIG_PINCTRL_STMFX=m
-CONFIG_PINCTRL_MAX77620=m
+# CONFIG_PINCTRL_MICROCHIP_SGPIO is not set
+# CONFIG_PINCTRL_OCELOT is not set
 CONFIG_PINCTRL_PALMAS=m
 CONFIG_PINCTRL_RK805=m
-# CONFIG_PINCTRL_OCELOT is not set
-# CONFIG_PINCTRL_MICROCHIP_SGPIO is not set
+CONFIG_PINCTRL_SINGLE=m
+CONFIG_PINCTRL_STMFX=m
+CONFIG_PINCTRL_SX150X=y
+CONFIG_PINCTRL_MADERA=m
+CONFIG_PINCTRL_CS47L35=y
+CONFIG_PINCTRL_CS47L85=y
+CONFIG_PINCTRL_CS47L90=y
 
 #
 # Renesas pinctrl drivers
 #
 # end of Renesas pinctrl drivers
 
-CONFIG_PINCTRL_MADERA=m
-CONFIG_PINCTRL_CS47L35=y
-CONFIG_PINCTRL_CS47L85=y
-CONFIG_PINCTRL_CS47L90=y
 CONFIG_GPIOLIB=y
 CONFIG_GPIOLIB_FASTPATH_LIMIT=512
 CONFIG_OF_GPIO=y
@@ -4364,6 +4372,7 @@ CONFIG_GPIO_VIPERBOARD=m
 CONFIG_GPIO_AGGREGATOR=m
 CONFIG_GPIO_MOCKUP=m
 CONFIG_GPIO_VIRTIO=m
+CONFIG_GPIO_SIM=m
 # end of Virtual GPIO drivers
 
 CONFIG_W1=m
@@ -4447,6 +4456,7 @@ CONFIG_CHARGER_LTC4162L=m
 CONFIG_CHARGER_DETECTOR_MAX14656=m
 CONFIG_CHARGER_MAX77650=m
 # CONFIG_CHARGER_MAX77693 is not set
+CONFIG_CHARGER_MAX77976=m
 # CONFIG_CHARGER_MAX8997 is not set
 # CONFIG_CHARGER_MAX8998 is not set
 CONFIG_CHARGER_MT6360=m
@@ -4570,11 +4580,11 @@ CONFIG_SENSORS_LM93=m
 CONFIG_SENSORS_LM95234=m
 CONFIG_SENSORS_LM95241=m
 CONFIG_SENSORS_LM95245=m
-CONFIG_SENSORS_NTC_THERMISTOR=m
 CONFIG_SENSORS_NCT7802=m
 CONFIG_SENSORS_NCT7904=m
 CONFIG_SENSORS_NPCM7XX=m
 CONFIG_SENSORS_NZXT_KRAKEN2=m
+CONFIG_SENSORS_NZXT_SMART2=m
 CONFIG_SENSORS_PCF8591=m
 CONFIG_PMBUS=m
 CONFIG_SENSORS_PMBUS=m
@@ -4582,6 +4592,7 @@ CONFIG_SENSORS_ADM1266=m
 CONFIG_SENSORS_ADM1275=m
 CONFIG_SENSORS_BEL_PFE=m
 CONFIG_SENSORS_BPA_RS600=m
+CONFIG_SENSORS_DELTA_AHE50DC_FAN=m
 CONFIG_SENSORS_FSP_3Y=m
 CONFIG_SENSORS_IBM_CFFPS=m
 CONFIG_SENSORS_DPS920AB=m
@@ -4589,6 +4600,7 @@ CONFIG_SENSORS_INSPUR_IPSPS=m
 # CONFIG_SENSORS_IR35221 is not set
 CONFIG_SENSORS_IR36021=m
 CONFIG_SENSORS_IR38064=m
+CONFIG_SENSORS_IR38064_REGULATOR=y
 # CONFIG_SENSORS_IRPS5401 is not set
 CONFIG_SENSORS_ISL68137=m
 CONFIG_SENSORS_LM25066=m
@@ -4604,6 +4616,7 @@ CONFIG_SENSORS_MAX34440=m
 CONFIG_SENSORS_MAX8688=m
 CONFIG_SENSORS_MP2888=m
 CONFIG_SENSORS_MP2975=m
+CONFIG_SENSORS_MP5023=m
 CONFIG_SENSORS_PIM4328=m
 CONFIG_SENSORS_PM6764TR=m
 # CONFIG_SENSORS_PXE1610 is not set
@@ -4636,6 +4649,7 @@ CONFIG_SENSORS_ADS7871=m
 CONFIG_SENSORS_AMC6821=m
 CONFIG_SENSORS_INA209=m
 CONFIG_SENSORS_INA2XX=m
+CONFIG_SENSORS_INA238=m
 CONFIG_SENSORS_INA3221=m
 CONFIG_SENSORS_TC74=m
 CONFIG_SENSORS_THMC50=m
@@ -4896,7 +4910,6 @@ CONFIG_MFD_WM8350=y
 CONFIG_MFD_WM8350_I2C=y
 CONFIG_MFD_WM8994=m
 # CONFIG_MFD_ROHM_BD718XX is not set
-# CONFIG_MFD_ROHM_BD70528 is not set
 # CONFIG_MFD_ROHM_BD71828 is not set
 CONFIG_MFD_ROHM_BD957XMUF=m
 CONFIG_MFD_STPMIC1=m
@@ -4971,6 +4984,7 @@ CONFIG_REGULATOR_MAX8952=m
 CONFIG_REGULATOR_MAX8973=m
 CONFIG_REGULATOR_MAX8997=m
 CONFIG_REGULATOR_MAX8998=m
+CONFIG_REGULATOR_MAX20086=m
 CONFIG_REGULATOR_MAX77686=m
 CONFIG_REGULATOR_MAX77693=m
 CONFIG_REGULATOR_MAX77802=m
@@ -5525,6 +5539,7 @@ CONFIG_VIDEO_OV5648=m
 # CONFIG_VIDEO_OV6650 is not set
 # CONFIG_VIDEO_OV5670 is not set
 CONFIG_VIDEO_OV5675=m
+CONFIG_VIDEO_OV5693=m
 # CONFIG_VIDEO_OV5695 is not set
 # CONFIG_VIDEO_OV7251 is not set
 # CONFIG_VIDEO_OV772X is not set
@@ -5819,9 +5834,8 @@ CONFIG_DRM_DP_CEC=y
 CONFIG_DRM_TTM=m
 CONFIG_DRM_VRAM_HELPER=m
 CONFIG_DRM_TTM_HELPER=m
-CONFIG_DRM_GEM_CMA_HELPER=y
-CONFIG_DRM_KMS_CMA_HELPER=y
-CONFIG_DRM_GEM_SHMEM_HELPER=y
+CONFIG_DRM_GEM_CMA_HELPER=m
+CONFIG_DRM_GEM_SHMEM_HELPER=m
 CONFIG_DRM_SCHED=m
 
 #
@@ -5877,7 +5891,8 @@ CONFIG_DRM_UDL=m
 CONFIG_DRM_AST=m
 CONFIG_DRM_MGAG200=m
 CONFIG_DRM_RCAR_DW_HDMI=m
-# CONFIG_DRM_RCAR_LVDS is not set
+CONFIG_DRM_RCAR_USE_LVDS=y
+CONFIG_DRM_RCAR_MIPI_DSI=m
 CONFIG_DRM_QXL=m
 CONFIG_DRM_VIRTIO_GPU=m
 CONFIG_DRM_PANEL=y
@@ -5888,6 +5903,7 @@ CONFIG_DRM_PANEL=y
 CONFIG_DRM_PANEL_ABT_Y030XX067A=m
 CONFIG_DRM_PANEL_ARM_VERSATILE=m
 CONFIG_DRM_PANEL_ASUS_Z00T_TM5P5_NT35596=m
+CONFIG_DRM_PANEL_BOE_BF060Y8M_AJ0=m
 CONFIG_DRM_PANEL_BOE_HIMAX8279D=m
 CONFIG_DRM_PANEL_BOE_TV101WUM_NL6=m
 CONFIG_DRM_PANEL_DSI_CM=m
@@ -5903,6 +5919,7 @@ CONFIG_DRM_PANEL_ILITEK_IL9322=m
 # CONFIG_DRM_PANEL_INNOLUX_EJ030NA is not set
 CONFIG_DRM_PANEL_INNOLUX_P079ZCA=m
 CONFIG_DRM_PANEL_JDI_LT070ME05000=m
+CONFIG_DRM_PANEL_JDI_R63452=m
 CONFIG_DRM_PANEL_KHADAS_TS050=m
 CONFIG_DRM_PANEL_KINGDISPLAY_KD097D04=m
 CONFIG_DRM_PANEL_LEADTEK_LTK050H3146W=m
@@ -5912,6 +5929,7 @@ CONFIG_DRM_PANEL_LG_LB035Q02=m
 CONFIG_DRM_PANEL_LG_LG4573=m
 CONFIG_DRM_PANEL_NEC_NL8048HL11=m
 CONFIG_DRM_PANEL_NOVATEK_NT35510=m
+CONFIG_DRM_PANEL_NOVATEK_NT35950=m
 CONFIG_DRM_PANEL_NOVATEK_NT36672A=m
 CONFIG_DRM_PANEL_NOVATEK_NT39016=m
 CONFIG_DRM_PANEL_MANTIX_MLAF057WE51=m
@@ -5943,6 +5961,7 @@ CONFIG_DRM_PANEL_SITRONIX_ST7703=m
 CONFIG_DRM_PANEL_SITRONIX_ST7789V=m
 CONFIG_DRM_PANEL_SONY_ACX424AKP=m
 CONFIG_DRM_PANEL_SONY_ACX565AKM=m
+CONFIG_DRM_PANEL_SONY_TULIP_TRULY_NT35521=m
 CONFIG_DRM_PANEL_TDO_TL070WSH30=m
 CONFIG_DRM_PANEL_TPO_TD028TTEC1=m
 CONFIG_DRM_PANEL_TPO_TD043MTEA1=m
@@ -6010,6 +6029,7 @@ CONFIG_DRM_CIRRUS_QEMU=m
 CONFIG_DRM_GM12U320=m
 CONFIG_DRM_SIMPLEDRM=m
 CONFIG_TINYDRM_HX8357D=m
+CONFIG_TINYDRM_ILI9163=m
 # CONFIG_TINYDRM_ILI9225 is not set
 # CONFIG_TINYDRM_ILI9341 is not set
 # CONFIG_TINYDRM_ILI9486 is not set
@@ -6026,6 +6046,7 @@ CONFIG_DRM_SIS=m
 CONFIG_DRM_VIA=m
 CONFIG_DRM_SAVAGE=m
 CONFIG_DRM_PANEL_ORIENTATION_QUIRKS=m
+CONFIG_DRM_NOMODESET=y
 
 #
 # Frame buffer Devices
@@ -6171,6 +6192,7 @@ CONFIG_SND_DMAENGINE_PCM=m
 CONFIG_SND_HWDEP=m
 CONFIG_SND_SEQ_DEVICE=m
 CONFIG_SND_RAWMIDI=m
+CONFIG_SND_COMPRESS_OFFLOAD=m
 CONFIG_SND_JACK=y
 CONFIG_SND_JACK_INPUT_DEV=y
 CONFIG_SND_OSSEMUL=y
@@ -6338,12 +6360,13 @@ CONFIG_SND_FIREFACE=m
 CONFIG_SND_SOC=m
 CONFIG_SND_SOC_AC97_BUS=y
 CONFIG_SND_SOC_GENERIC_DMAENGINE_PCM=y
-CONFIG_SND_SOC_TOPOLOGY=y
+CONFIG_SND_SOC_COMPRESS=y
 CONFIG_SND_SOC_ADI=m
 CONFIG_SND_SOC_ADI_AXI_I2S=m
 CONFIG_SND_SOC_ADI_AXI_SPDIF=m
 CONFIG_SND_SOC_AMD_ACP=m
 CONFIG_SND_SOC_AMD_CZ_RT5645_MACH=m
+CONFIG_SND_AMD_ACP_CONFIG=m
 CONFIG_SND_ATMEL_SOC=m
 CONFIG_SND_SOC_MIKROE_PROTO=m
 CONFIG_SND_BCM63XX_I2S_WHISTLER=m
@@ -6384,7 +6407,6 @@ CONFIG_SND_SOC_SOF_TOPLEVEL=y
 CONFIG_SND_SOC_SOF_PCI=m
 CONFIG_SND_SOC_SOF_OF=m
 # CONFIG_SND_SOC_SOF_DEBUG_PROBES is not set
-CONFIG_SND_SOC_SOF=m
 
 #
 # STMicroelectronics STM32 SOC audio support
@@ -6400,6 +6422,7 @@ CONFIG_SND_SOC_I2C_AND_SPI=m
 #
 # CODEC drivers
 #
+CONFIG_SND_SOC_WM_ADSP=m
 CONFIG_SND_SOC_AC97_CODEC=m
 CONFIG_SND_SOC_ADAU_UTILS=m
 CONFIG_SND_SOC_ADAU1372=m
@@ -6416,6 +6439,7 @@ CONFIG_SND_SOC_ADAU7118_HW=m
 CONFIG_SND_SOC_ADAU7118_I2C=m
 CONFIG_SND_SOC_AK4104=m
 CONFIG_SND_SOC_AK4118=m
+CONFIG_SND_SOC_AK4375=m
 CONFIG_SND_SOC_AK4458=m
 CONFIG_SND_SOC_AK4554=m
 CONFIG_SND_SOC_AK4613=m
@@ -6431,6 +6455,8 @@ CONFIG_SND_SOC_CS35L33=m
 CONFIG_SND_SOC_CS35L34=m
 CONFIG_SND_SOC_CS35L35=m
 CONFIG_SND_SOC_CS35L36=m
+CONFIG_SND_SOC_CS35L41_LIB=m
+CONFIG_SND_SOC_CS35L41=m
 CONFIG_SND_SOC_CS35L41_SPI=m
 CONFIG_SND_SOC_CS35L41_I2C=m
 CONFIG_SND_SOC_CS42L42=m
@@ -6532,6 +6558,7 @@ CONFIG_SND_SOC_TAS6424=m
 CONFIG_SND_SOC_TDA7419=m
 CONFIG_SND_SOC_TFA9879=m
 CONFIG_SND_SOC_TFA989X=m
+CONFIG_SND_SOC_TLV320ADC3XXX=m
 CONFIG_SND_SOC_TLV320AIC23=m
 CONFIG_SND_SOC_TLV320AIC23_I2C=m
 CONFIG_SND_SOC_TLV320AIC23_SPI=m
@@ -6661,6 +6688,7 @@ CONFIG_HID_KENSINGTON=m
 CONFIG_HID_LCPOWER=m
 CONFIG_HID_LED=m
 CONFIG_HID_LENOVO=m
+CONFIG_HID_LETSKETCH=m
 CONFIG_HID_LOGITECH=m
 CONFIG_HID_LOGITECH_DJ=m
 CONFIG_HID_LOGITECH_HIDPP=m
@@ -7275,6 +7303,7 @@ CONFIG_LEDS_AS3645A=m
 CONFIG_LEDS_KTD2692=m
 # CONFIG_LEDS_LM3601X is not set
 # CONFIG_LEDS_MAX77693 is not set
+CONFIG_LEDS_MT6360=m
 CONFIG_LEDS_RT4505=m
 # CONFIG_LEDS_RT8515 is not set
 CONFIG_LEDS_SGM3140=m
@@ -7304,6 +7333,10 @@ CONFIG_LEDS_TRIGGER_PANIC=y
 CONFIG_LEDS_TRIGGER_PATTERN=m
 CONFIG_LEDS_TRIGGER_AUDIO=m
 CONFIG_LEDS_TRIGGER_TTY=m
+
+#
+# Simple LED drivers
+#
 CONFIG_ACCESSIBILITY=y
 CONFIG_A11Y_BRAILLE_CONSOLE=y
 
@@ -7694,6 +7727,7 @@ CONFIG_VT6655=m
 CONFIG_VT6656=m
 CONFIG_FB_SM750=m
 CONFIG_STAGING_MEDIA=y
+CONFIG_VIDEO_MAX96712=m
 # CONFIG_VIDEO_ZORAN is not set
 CONFIG_DVB_AV7110_IR=y
 CONFIG_DVB_AV7110=m
@@ -7746,7 +7780,6 @@ CONFIG_FB_TFT_TLS8204=m
 CONFIG_FB_TFT_UC1611=m
 CONFIG_FB_TFT_UC1701=m
 CONFIG_FB_TFT_UPD161704=m
-CONFIG_FB_TFT_WATTEROTT=m
 # CONFIG_MOST_COMPONENTS is not set
 CONFIG_KS7010=m
 CONFIG_GREYBUS_AUDIO=m
@@ -7790,6 +7823,7 @@ CONFIG_COMMON_CLK_SI570=m
 CONFIG_COMMON_CLK_CDCE706=m
 CONFIG_COMMON_CLK_CDCE925=m
 CONFIG_COMMON_CLK_CS2000_CP=m
+CONFIG_COMMON_CLK_LAN966X=y
 CONFIG_CLK_TWL6040=m
 CONFIG_COMMON_CLK_AXI_CLKGEN=m
 CONFIG_COMMON_CLK_PALMAS=m
@@ -7973,8 +8007,10 @@ CONFIG_PHY_CADENCE_SIERRA=m
 CONFIG_PHY_CADENCE_SALVO=m
 CONFIG_PHY_FSL_IMX8MQ_USB=m
 CONFIG_PHY_MIXEL_MIPI_DPHY=m
+CONFIG_PHY_FSL_IMX8M_PCIE=m
 CONFIG_PHY_PXA_28NM_HSIC=m
 CONFIG_PHY_PXA_28NM_USB2=m
+CONFIG_PHY_LAN966X_SERDES=m
 CONFIG_PHY_MAPPHONE_MDM6600=m
 CONFIG_PHY_OCELOT_SERDES=m
 CONFIG_PHY_QCOM_USB_HS=m
@@ -8013,12 +8049,10 @@ CONFIG_ND_PFN=m
 CONFIG_NVDIMM_PFN=y
 CONFIG_NVDIMM_DAX=y
 CONFIG_OF_PMEM=m
-CONFIG_DAX_DRIVER=y
 CONFIG_DAX=y
 CONFIG_DEV_DAX=m
 CONFIG_DEV_DAX_PMEM=m
 CONFIG_DEV_DAX_KMEM=m
-CONFIG_DEV_DAX_PMEM_COMPAT=m
 CONFIG_NVMEM=y
 CONFIG_NVMEM_SYSFS=y
 CONFIG_NVMEM_SPMI_SDAM=m
@@ -8190,6 +8224,7 @@ CONFIG_FSCACHE=m
 # CONFIG_FSCACHE_DEBUG is not set
 CONFIG_CACHEFILES=m
 # CONFIG_CACHEFILES_DEBUG is not set
+# CONFIG_CACHEFILES_ERROR_INJECTION is not set
 # end of Caches
 
 #
@@ -8687,6 +8722,7 @@ CONFIG_CRYPTO_DRBG_HMAC=y
 # CONFIG_CRYPTO_DRBG_CTR is not set
 CONFIG_CRYPTO_DRBG=m
 CONFIG_CRYPTO_JITTERENTROPY=m
+CONFIG_CRYPTO_KDF800108_CTR=y
 CONFIG_CRYPTO_USER_API=m
 CONFIG_CRYPTO_USER_API_HASH=m
 CONFIG_CRYPTO_USER_API_SKCIPHER=m
@@ -8696,25 +8732,6 @@ CONFIG_CRYPTO_USER_API_AEAD=m
 CONFIG_CRYPTO_USER_API_ENABLE_OBSOLETE=y
 # CONFIG_CRYPTO_STATS is not set
 CONFIG_CRYPTO_HASH_INFO=y
-
-#
-# Crypto library routines
-#
-CONFIG_CRYPTO_LIB_AES=y
-CONFIG_CRYPTO_LIB_ARC4=m
-CONFIG_CRYPTO_LIB_BLAKE2S_GENERIC=m
-CONFIG_CRYPTO_LIB_BLAKE2S=m
-CONFIG_CRYPTO_LIB_CHACHA_GENERIC=m
-CONFIG_CRYPTO_LIB_CHACHA=m
-CONFIG_CRYPTO_LIB_CURVE25519_GENERIC=m
-CONFIG_CRYPTO_LIB_CURVE25519=m
-CONFIG_CRYPTO_LIB_DES=m
-CONFIG_CRYPTO_LIB_POLY1305_RSIZE=1
-CONFIG_CRYPTO_LIB_POLY1305_GENERIC=m
-CONFIG_CRYPTO_LIB_POLY1305=m
-CONFIG_CRYPTO_LIB_CHACHA20POLY1305=m
-CONFIG_CRYPTO_LIB_SHA256=y
-CONFIG_CRYPTO_LIB_SM4=m
 CONFIG_CRYPTO_HW=y
 CONFIG_CRYPTO_DEV_NX=y
 CONFIG_CRYPTO_DEV_NX_ENCRYPT=y
@@ -8770,6 +8787,26 @@ CONFIG_RATIONAL=y
 CONFIG_GENERIC_PCI_IOMAP=y
 CONFIG_GENERIC_IOMAP=y
 CONFIG_ARCH_USE_CMPXCHG_LOCKREF=y
+
+#
+# Crypto library routines
+#
+CONFIG_CRYPTO_LIB_AES=y
+CONFIG_CRYPTO_LIB_ARC4=m
+CONFIG_CRYPTO_LIB_BLAKE2S_GENERIC=y
+CONFIG_CRYPTO_LIB_CHACHA_GENERIC=m
+CONFIG_CRYPTO_LIB_CHACHA=m
+CONFIG_CRYPTO_LIB_CURVE25519_GENERIC=m
+CONFIG_CRYPTO_LIB_CURVE25519=m
+CONFIG_CRYPTO_LIB_DES=m
+CONFIG_CRYPTO_LIB_POLY1305_RSIZE=1
+CONFIG_CRYPTO_LIB_POLY1305_GENERIC=m
+CONFIG_CRYPTO_LIB_POLY1305=m
+CONFIG_CRYPTO_LIB_CHACHA20POLY1305=m
+CONFIG_CRYPTO_LIB_SHA256=y
+CONFIG_CRYPTO_LIB_SM4=m
+# end of Crypto library routines
+
 CONFIG_CRC_CCITT=m
 CONFIG_CRC16=m
 CONFIG_CRC_T10DIF=y
@@ -8935,6 +8972,11 @@ CONFIG_HAVE_KCSAN_COMPILER=y
 # end of Generic Kernel Debugging Instruments
 
 # CONFIG_DEBUG_KERNEL is not set
+
+#
+# Networking Debugging
+#
+# end of Networking Debugging
 
 #
 # Memory Debugging
