--- a/openvpn/PKGBUILD
+++ b/openvpn/PKGBUILD
@@ -2,11 +2,11 @@
 # Maintainer: Christian Hesse <mail@eworm.de>
 
 pkgname=openvpn
-_tag='0071e180470e6d3a830da7b96df4ea8e510d2987' # git rev-parse v${pkgver}
-pkgver=2.5.3
+_tag='4bac15c56a54350076925391dc317c0139c7b5b0' # git rev-parse v${pkgver}
+pkgver=2.5.6
 pkgrel=1
 pkgdesc='An easy-to-use, robust and highly configurable VPN (Virtual Private Network)'
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://openvpn.net/index.php/open-source.html'
 license=('custom')
 depends=('openssl' 'lzo' 'lz4' 'systemd-libs' 'libsystemd.so' 'pkcs11-helper' 'libpkcs11-helper.so')
